--- a/templates/base.html
+++ b/templates/base.html
@@ -9,7 +9,8 @@
   </head>
   <body>
     <header>
-      <h1 class="text-4xl text-center py-4">Video Hopper</h1>
+      <h1 class="text-4xl text-center py-4"><a href="/">Video Hopper</a></h1>
+      <h2 class="text-xl text-center py-4">Search and Hop Through Video Transcripts</h2>
     </header>
   
     {% block content %}
