--- a/templates/video.html
+++ b/templates/video.html
@@ -6,7 +6,7 @@
     <!-- Video player and video info -->
     <div class="col-span-2">
       <div class="relative rounded-xl overflow-auto p-4 border border-grey-600">
-        <iframe id="video-player" class="w-full aspect-video rounded-lg shadow-lg" src="https://www.youtube.com/embed/{{ video.video_stream_id }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
+        <iframe id="video-player" class="w-full aspect-video rounded-lg shadow-lg" src="https://www.youtube.com/embed/{{ video.video_id }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
         <h2 class="font-bold text-2xl my-2">{{ video.video_name }}</h2>
         <p class="text-gray-500">{{ video.video_date }}</p>
          <p class="text-gray-700">{{ video.video_short_description }}</p>
@@ -23,15 +23,10 @@
                hx-post="/search?vid={{ video.video_id }}" 
                hx-trigger="keyup changed delay:1500ms, search" 
                hx-target="#search-results" >
-        <!-- <input class="search-input" type="search" 
-               name="search" placeholder="Begin Typing To Search..." 
-               hx-post="/search?vid=1" 
-               hx-trigger="keyup changed delay:1500ms, search" 
-               hx-target="#search-results" > -->
 
       <!-- </form> -->
   
-
+      <div class="h-screen overflow-y-auto">
       <table class="table-auto w-full">
         <thead>
           <tr>
@@ -51,6 +46,7 @@
         {% endfor %} -->
       </tbody>
     </table>
+    </div>
   </div>
 </div>
 </section>
