--- a/templates/video.html
+++ b/templates/video.html
@@ -1,42 +1,51 @@
 {% extends "base.html" %}
 
 {% block content %}
-<section class="container mx-auto p-4 md:p-0">
-  <div class="grid grid-cols-3 gap-4 m-4">
+<section class="container mx-auto p-0 md:p-0">
+  <div class="grid grid-cols-3 gap-4 mt-4">
     <!-- Video player and video info -->
     <div class="col-span-2">
       <div class="relative rounded-xl overflow-auto p-4 border border-grey-600">
         <iframe id="video-player" class="w-full aspect-video rounded-lg shadow-lg" src="https://www.youtube.com/embed/{{ video.video_id }}" frameborder="0" allow="accelerometer; autoplay; clipboard-write; encrypted-media; gyroscope; picture-in-picture" allowfullscreen></iframe>
-        <h2 class="font-bold text-2xl my-2">{{ video.video_name }}</h2>
-        <p class="text-gray-500">{{ video.video_date }}</p>
-         <p class="text-gray-700">{{ video.video_short_description }}</p>
+        <h2 class="text-xl font-semibold my-2">{{ video.video_name }}</h2>
+        <p class="text-sm text-teal-700 my-2">{{ video.video_date }}</p>
+         <p class="text-sm text-slate-500 my-2">{{ video.video_short_description }}</p>
         </div>
     </div>
 
     <!-- Transcript search form and transcript table -->
     <div class="col-span-1">
       <!-- <form class="mb-4" method="POST"> -->
-        <label for="search" class="block mb-2 text-sm font-bold text-gray-700">Search transcript</label>
-        <input class="search-input shadow appearance-none border rounded w-full py-2 px-3 text-gray-700 leading-tight focus:outline-none focus:shadow-outline"
+        <label for="search" class="block mb-2 text-sm font-bold">Search transcript</label>
+        <input class="search-input shadow appearance-none border rounded w-full py-2 px-3 text-slate-500 text-sm leading-tight focus:outline-none focus:shadow-outline"
                type="search" 
-               name="search" placeholder="Begin Typing To Search..." 
+               name="search" placeholder="Begin Typing To Search Transcript.." 
                hx-post="/search?vid={{ video.video_id }}" 
                hx-trigger="keyup changed delay:1500ms, search" 
-               hx-target="#search-results" >
+               hx-target="#search-results" 
+               hx-swap="innerHTML">
 
       <!-- </form> -->
   
       <div class="h-screen overflow-y-auto">
-      <table class="table-auto w-full">
+      <table class="table-auto w-full text-sm">
         <thead>
           <tr>
-            <th class="px-4 py-2">Transcript text</th>
-            <th class="px-4 py-2">Time in video</th>
+            <th class="px-2 pt-4 pb-2">Transcript text</th>
+            <th class="px-2 pt-4 pb-2">Time in video</th>
           </tr>
         </thead>
         <tbody id="search-results">
-          <td class="border px-4 py-2">Start searching to see transcript sections</td>
-          <td class="border px-4 py-2"></td>
+          <tr class="hover:bg-slate-50">
+          <td class="border text-slate-500 text-sm px-2 py-2 hover:bg-slate-50">Search above or hop to the start of the video...</td>
+          <td class="border px-2 py-2 min-w-128 hover:bg-slate-50">
+            <button 
+            class="whitespace-nowrap min-w-128 bg-teal-500 hover:bg-teal-700 text-xs text-white py-2 px-2 rounded"
+            hx-get="/video-hop?vid={{ video.video_id }}&start=0" hx-target="#video-player" hx-swap="outerHTML">Hop to 00:00:00
+            </button>
+          </td>
+          </tr>
+          <!-- <td colspan="2" class="border px-2 py-2 text-slate-500">Start searching to see transcript text and timestamps</td> -->
           <!-- {% for transcript in video.video_transcript %}
           <tr>
             <td class="border px-4 py-2">{{ transcript.text }}</td>
