--- a/templates/base.html
+++ b/templates/base.html
@@ -3,13 +3,13 @@
   <head>
     <meta charset="UTF-8">
     <meta name="viewport" content="width=device-width, initial-scale=1.0">
-    <title>Video Hopper</title>
+    <title>Video Hop - Search and Hop Through Video Transcripts</title>
     <script src="https://unpkg.com/htmx.org@1.7.0"></script>
     <link rel="stylesheet" type="text/css" href="{{ url_for('static', filename='dist/main.css') }}">
   </head>
   <body class="flex flex-col min-h-screen">
     <header class="container mx-auto">
-      <h1 class="text-3xl font-bold text-left mt-4"><a href="/">Video Hopper</a></h1>
+      <h1 class="text-3xl font-bold text-left mt-4"><a href="/">Video Hop</a></h1>
       <h2 class="text-sm text-teal-700 text-left mt-2">Search and Hop Through Video Transcripts</h2>
     </header>
     <main class="flex-grow">
@@ -18,7 +18,7 @@
     {% endblock %}
     </main>
     <footer>
-      <p class="text-center text-sm text-slate-500 py-4">© 2023 Video Hopper - Tahir Fayyaz</p>
+      <p class="text-center text-sm text-slate-500 py-4">Video Hop © 2023 - Tahir Fayyaz</p>
     </footer>
   </body>
 </html>
